--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context="com.example.mina.limecatapplication.WelcomeActivity">
+
+    <EditText
+        android:id="@+id/msg_text"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_msg"
+        />
+
+    <Button
+        android:id="@+id/send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_text"
+        android:onClick="sendMessage"
+
+        android:layout_toRightOf="@+id/msg_text"
+        />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:onClick="showHell"
+        android:text="Open Window..."
+
+        android:layout_below="@+id/msg_text"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hell appears here..."
+        android:text="Message appears here..."
         android:id="@+id/hell_text_view"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:layout_below="@+id/button3"
+         />
 
-    <Button
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:text="Show Hell"
-        android:onClick="showHell"
 
-        app:layout_constraintBottom_toBottomOf="@+id/hell_text_view"
-        app:layout_constraintLeft_toLeftOf="@+id/hell_text_view"
-        app:layout_constraintRight_toRightOf="@+id/hell_text_view"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
