--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.mina.limecatapplication.SecondActivity">
 
+    <LinearLayout
+        android:id="@+id/chart_container"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp">
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
