--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -10,27 +10,51 @@
         android:id="@+id/chart_container"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="400dp">
+        android:layout_height="300dp">
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/Description"
-        android:layout_width="match_parent"
-        android:layout_height="178dp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="72dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/chart_container">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/info"
-            android:text="Description: This is the graph of data for ten years."
+            android:text="Description: This is the graph of data for seven days."
             android:textAppearance="?android:textAppearanceLarge"
             />
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/present"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Description"
+        android:layout_centerHorizontal="true"
+        android:text="Present"
+        android:onClick="showPresent"/>
+
+    <Button
+        android:id="@+id/future"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/present"
+        android:layout_centerHorizontal="true"
+        android:text="Future"
+        android:onClick="showFuture"/>
+
+    <Button
+        android:id="@+id/compare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/future"
+        android:layout_centerHorizontal="true"
+        android:text="Compare"
+        android:onClick="showCompare"/>
 
 
 </RelativeLayout>
